# EmployeeDB

./: Makefile  Makefile.am  Makefile.in  README  a.out  common_utils.h  config.h  config.h.in  config.status  configure  configure.ac  configure~  emp.c  emp_list.c  emp_list.h  emp_util.c  emp_util.h  employee.c  employee.h  file_list.sh  file_mgr.c  file_mgr.h  play.c  test
.deps/: employee_mgr-emp.Po  employee_mgr-emp_list.Po  employee_mgr-emp_util.Po  employee_mgr-employee.Po  employee_mgr-file_mgr.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
inc/: common_utils.h  emp_list.h  emp_util.h  file_mgr.h
src/: emp.c  emp_list.c  file_mgr.c
